--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -173,6 +173,15 @@
                     <br /><small><a href="http://creativecommons.org/licenses/by-sa/2.0/">creative commons licensed ( BY-SA )</a> <a title="Keys" href="http://flickr.com/photos/120600995@N07/14028600474">flickr photo</a> shared by <a href="http://flickr.com/people/120600995@N07">jacqui.brown33</a></small>
                 </section>
 
+                <section> 
+                    <h1 id="a_complete_example">A Complete Example</h1>
+                    <p class="fragment">Use <code>git pull</code> in the course repository</p>
+                    <p class="fragment">Find the <code>Writers.sql</code> file</p>
+                    <p class="fragment">Use the <b class="orange">.read</b> to input this schema</p>
+                    <p class="fragment">Review the use of the <b class="plum">.schema</b> and <b class="plum">.tables</b></p>
+                    <p class="fragment">How is this schema different than the previous one?</p>
+                </section>
+
             </div>
 
             <script src="lib/js/head.min.js"></script>
