Finished a draft of all of the slides for chapter2.

--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -182,6 +182,29 @@
                     <p class="fragment">How is this schema different than the previous one?</p>
                 </section>
 
+                <section>
+                    <h1 id="exploring_the_database">Exploring the Database</h1>
+                    <p class="fragment">Use <b class="green">INSERT</b> statements to add data to all of the tables</p>
+                    <p class="fragment">Try to both <b class="scarlet">violate</b> and <b class="sky">satisfy</b> the schema's constraints</p>
+                    <p class="fragment">How does SQLite handles keys? Why?</p>
+                    <p class="fragment">Can you save the state of the database to a file?</p>
+                </section>
+
+                <section>
+                    <h1 id="schema_diagrams">Schema Diagrams</h1>
+                    <p class="fragment">Informal and formal</p>
+                    <p class="fragment">The benefits of visualization</p>
+                    <p class="fragment">Showing the primary and foreign keys</p>
+                </section>
+
+                <section> 
+                    <h1 id="join_operators">Join Operators</h1>
+                    <p class="fragment">Natural join</p>
+                    <p class="fragment">Cartesian product</p>
+                    <p class="fragment">Following the schema's keys!</p>
+                    <p class="fragment">Efficiency concerns for performing joins</p>
+                </section>
+
             </div>
 
             <script src="lib/js/head.min.js"></script>
