Minor changes to the chapter2 slides.

--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -177,8 +177,8 @@
                     <h1 id="a_complete_example">A Complete Example</h1>
                     <p class="fragment">Use <code>git pull</code> in the course repository</p>
                     <p class="fragment">Find the <code>Writers.sql</code> file</p>
-                    <p class="fragment">Use the <b class="orange">.read</b> to input this schema</p>
-                    <p class="fragment">Review the use of the <b class="plum">.schema</b> and <b class="plum">.tables</b></p>
+                    <p class="fragment">Use the <b class="orange">.read</b> command to input this schema</p>
+                    <p class="fragment">Review the use of <b class="plum">.schema</b> and <b class="plum">.tables</b></p>
                     <p class="fragment">How is this schema different than the previous one?</p>
                 </section>
 
