--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -163,6 +163,9 @@
                     <p class="fragment">Do you have any questions about using <code>sqlite3</code>?</p>
                 </section>
 
+                <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="">
+                </section>
+
                 <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="background: rgba(29,31,33,0.9)">
                     <h1>Database Keys</h1>
                     <p class="fragment">What is a <b class="scarlet">foreign</b> key?</p>
@@ -190,12 +193,19 @@
                     <p class="fragment">Can you save the state of the database to a file?</p>
                 </section>
 
-                <section>
+                <section data-background-transition="none" data-background="https://farm5.staticflickr.com/4079/4807939424_62807b480c_o.jpg" style="">
+                </section>
+
+                <section data-background-transition="none" data-background="https://farm5.staticflickr.com/4079/4807939424_62807b480c_o.jpg" style="background: rgba(29,31,33,0.9)">
                     <h1 id="schema_diagrams">Schema Diagrams</h1>
                     <p class="fragment">Informal and formal</p>
                     <p class="fragment">The benefits of visualization</p>
                     <p class="fragment">Showing the primary and foreign keys</p>
+                    <p class="fragment">Many cool tools for this: <code>SQLFairy</code> and <code>SchemaSpy</code>!</p>
+<br /><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="Hayes Valley School & Park Map" href="http://flickr.com/photos/edibleoffice/4807939424">flickr photo</a> shared by <a href="http://flickr.com/people/edibleoffice">edibleoffice</a></small>
+
                 </section>
+
 
                 <section> 
                     <h1 id="join_operators">Join Operators</h1>
@@ -203,6 +213,7 @@
                     <p class="fragment">Cartesian product</p>
                     <p class="fragment">Following the schema's keys!</p>
                     <p class="fragment">Efficiency concerns for performing joins</p>
+                    <p class="fragment">Once again, what is the purpose of a join operator?</p>
                 </section>
 
             </div>
