Added the first slide for the chapter3 material.

--- a/slides/cs380-chapter3.html
+++ b/slides/cs380-chapter3.html
@@ -56,6 +56,17 @@
                     <br/><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="vases" href="http://flickr.com/photos/mybloodyself/2428544365">flickr photo</a> shared by <a href="http://flickr.com/people/mybloodyself">danmachold</a></small>
                 </section>
 
+                <section>
+                    <h1 id="components_of_sql">SQL Features</h1>
+                    <p class="fragment">Data definition language (DDL)</p>
+                    <p class="fragment">Data manipulation language (DML)</p>
+                    <p class="fragment">Integrity constraint specification</p>
+                    <p class="fragment">View definition</p>
+                    <p class="fragment">Transaction control</p>
+                    <p class="fragment">Embedded and dynamic SQL</p>
+                    <p class="fragment">Authentication and authorization</p>
+                </section>
+
             </div>
 
             <script src="lib/js/head.min.js"></script>
