Adding in the first two slides for chapter3 of the cs380 slides.

--- a/slides/cs380-chapter3.html
+++ b/slides/cs380-chapter3.html
@@ -67,6 +67,16 @@
                     <p class="fragment">Authentication and authorization</p>
                 </section>
 
+                <section>
+                    <h1 id="sql_data_types">SQL Data Types</h1>
+                    <p class="fragment"><code>char(n)</code> and <code>varchar(n)</code></p>
+                    <p class="fragment">Similarities and differences in character types?</p>
+                    <p class="fragment"><code>int</code> and <code>smallint</code></p>
+                    <p class="fragment"><code>numeric(p, d)</code> for specific <code>p</code> and <code>d</code></p>
+                    <p class="fragment"><code>float(n) for a specific <code>n</code></code></p>
+                    <p class="fragment">See page 59 for a discussion of the basic SQL types!</p>
+                </section>
+
             </div>
 
             <script src="lib/js/head.min.js"></script>
