Updated the slides to go all the way through the select statements.

--- a/slides/cs380-chapter3.html
+++ b/slides/cs380-chapter3.html
@@ -77,6 +77,32 @@
                     <p class="fragment">See page 59 for a discussion of the basic SQL types!</p>
                 </section>
 
+                <section>
+                    <h1 id="create_table">Create Table</h1>
+                    <p class="fragment">Part of the data manipulation language</p>
+                    <p class="fragment">What are the fundamental components?</p>
+                    <p class="fragment">Check the diagram in the SQLite documentation!</p>
+                    <p class="fragment">Attributes and their domains</p>
+                    <p class="fragment">Integrity constraints</p>
+                </section>
+
+                <section> 
+                    <h1 id="a_comparison">A Comparison</h1>
+                    <p class="fragment">The distinction between DML and DDL can be confusing</p>
+                    <p class="fragment">Compare: <b class="orange"><code>drop table r</code></b> and <b class="sky"><code>delete from r</code></b></p>
+                    <p class="fragment">How are their actions similar and different?</p>
+                    <p class="fragment">What about DML?</p>
+                    <p class="fragment">Which one is DDL?</p>
+                </section>
+
+                <section>
+                    <h1 id="selecting_data">Selecting Data</h1>
+                    <p class="fragment">The general form of a <code>SELECT</code></p>
+                    <p class="fragment">Some examples of <code>SELECT</code> statements</p>
+                    <p class="fragment">Queries on a single table or on multiple tables</p>
+                    <p class="fragment">Wait, how does the DBMS execute the <code>SELECT</code>?</p>
+                    <p class="fragment">A wide variety of additional basic operations</p>
+                    <p class="fragment">Examining a <code>SELECT</code> in JoSQL</p>
             </div>
 
             <script src="lib/js/head.min.js"></script>
