Added a closing section tag for one of the slides in chapter3.

--- a/slides/cs380-chapter3.html
+++ b/slides/cs380-chapter3.html
@@ -103,6 +103,8 @@
                     <p class="fragment">Wait, how does the DBMS execute the <code>SELECT</code>?</p>
                     <p class="fragment">A wide variety of additional basic operations</p>
                     <p class="fragment">Examining a <code>SELECT</code> in JoSQL</p>
+                </section>
+
             </div>
 
             <script src="lib/js/head.min.js"></script>
