--- a/slides/cs380-chapter3.html
+++ b/slides/cs380-chapter3.html
@@ -126,6 +126,19 @@
                     <p class="fragment">Declarative summarization of a data set</p>
                 </section>
 
+                <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7165/6796557351_01a2fb89ca.jpg" style="">
+                </section>
+
+                <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7165/6796557351_01a2fb89ca.jpg" style="background: rgba(29,31,33,0.9)">
+                    <h1 id="transactions">Transactions</h1>
+                    <p class="fragment">Demarcated by a BEGIN and END</p>
+                    <p class="fragment">Two possible options: COMMIT or ROLLBACK</p>
+                    <p class="fragment">Goal: Uphold the ACID properties</p>
+                    <p class="fragment">Integrity constraint violation during transactions?</p>
+                    <p class="fragment">Does SQLite provide full transaction support?</p>
+<br /><small><a href="http://creativecommons.org/licenses/by-nc-nd/2.0/">creative commons licensed ( BY-NC-ND )</a> <a title="An accusation" href="http://flickr.com/photos/54714244@N08/6796557351">flickr photo</a> shared by <a href="http://flickr.com/people/54714244@N08">chrisowenrichards</a></small>
+                </section>
+
             </div>
 
             <script src="lib/js/head.min.js"></script>
