--- a/slides/cs380-chapter3.html
+++ b/slides/cs380-chapter3.html
@@ -67,6 +67,21 @@
                     <p class="fragment">Authentication and authorization</p>
                 </section>
 
+                <section data-background-transition="none" data-background="http://farm5.static.flickr.com/4099/4869608487_4fd1039f1d.jpg" style="">
+                </section>
+
+                <section data-background-transition="none" data-background="http://farm5.static.flickr.com/4099/4869608487_4fd1039f1d.jpg" style="background: rgba(29,31,33,0.9)">
+                    <h1 id="sql_data_types">Data Types</h1>
+                    <p class="fragment"><code>char(n)</code> and <code>varchar(n)</code></p>
+                    <p class="fragment">Similarities and differences in character types?</p>
+                    <p class="fragment"><code>int</code> and <code>smallint</code></p>
+                    <p class="fragment"><code>numeric(p, d)</code> for specific <code>p</code> and <code>d</code></p>
+                    <p class="fragment"><code>float(n) for a specific <code>n</code></code></p>
+                    <p class="fragment">See page 59 for a discussion of the basic SQL types!</p>
+<br /><small><a href="http://creativecommons.org/licenses/by-nc/2.0/">creative commons licensed ( BY-NC )</a> <a title="Type" href="http://flickr.com/photos/delete08/4869608487">flickr photo</a> shared by <a href="http://flickr.com/people/delete08">delete08</a></small>
+
+</section>
+
                 <section>
                     <h1 id="sql_data_types">SQL Data Types</h1>
                     <p class="fragment"><code>char(n)</code> and <code>varchar(n)</code></p>
@@ -145,7 +160,6 @@
             <script src="js/reveal.min.js"></script>
 
             <script>
-
                 // Full list of configuration options available here:
                 // https://github.com/hakimel/reveal.js#configuration
             Reveal.initialize({
