--- a/slides/cs380-chapter3.html
+++ b/slides/cs380-chapter3.html
@@ -84,7 +84,7 @@
 
                 <section>
                     <h1 id="create_table">Create Table</h1>
-                    <p class="fragment">Part of the data manipulation language</p>
+                    <p class="fragment">Part of the data definition language</p>
                     <p class="fragment">What are the fundamental components?</p>
                     <p class="fragment">Check the diagram in the SQLite documentation!</p>
                     <p class="fragment">Attributes and their domains</p>
