Adding another phrase to one of the slides.

--- a/slides/cs380-chapter4.html
+++ b/slides/cs380-chapter4.html
@@ -61,7 +61,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 </section>
 
                 <section>
-                    <h1 id="reinforce_and_deepen">Reinforce and Deepen SQL Concepts</h1>
+                    <h1 id="reinforce_and_deepen">Reinforce and Deepen Understanding of SQL Concepts</h1>
                 </section>
 
                 <section>
