Adding the slides about the views and the DML statements.

--- a/slides/cs380-chapter4.html
+++ b/slides/cs380-chapter4.html
@@ -61,7 +61,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 </section>
 
                 <section>
-                    <h1 id="reinforce_and_deepen">Reinforce and Deepen Understanding of SQL Concepts</h1>
+                    <h1 id="reinforce_and_deepen">Deepen Understanding of SQL Concepts</h1>
                 </section>
 
                 <section>
@@ -89,6 +89,23 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Modifying a view</p>
                     <p class="fragment">When is a view updatable?</p>
                     <p class="fragment">What are the challenges?</p>
+                    <p class="fragment">Normally, avoid modifying the view</p>
+                </section>
+
+                <section>
+                    <h1 id="materializing_views">Materializing Views</h1>
+                    <p class="fragment">Store a view in the RDBMS</p>
+                    <p class="fragment">When should we change the view?</p>
+                    <p class="fragment">Why do we want to materialize?</p>
+                    <p class="fragment">What are the trade-offs?</p>
+                </section>
+
+                <section>
+                    <h1 id="dml_statements">DML Statements</h1>
+                    <p class="fragment">SQL delete</p>
+                    <p class="fragment">SQL insert</p>
+                    <p class="fragment">SQL update</p>
+                    <p class="fragment">General form and specific details</p>
                 </section>
 
             </div>
