Adding in the slides for the details about integrity constraints.

--- a/slides/cs380-chapter4.html
+++ b/slides/cs380-chapter4.html
@@ -108,6 +108,16 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">General form and specific details</p>
                 </section>
 
+                <section>
+                    <h1 id="integrity_constraints">Integrity Constraints</h1>
+                    <p class="fragment">NOT NULL</p>
+                    <p class="fragment">UNIQUE</p>
+                    <p class="fragment">CHECK</p>
+                    <p class="fragment">FOREIGN and PRIMARY KEY</p>
+                    <p class="fragment">In HSQLDB a CHECK can call a Java function!</p>
+                    <p class="fragment">What are the trade-offs for CHECK constraints?</p>
+                </section>
+
             </div>
 
         </div>
