Adding the final slides for the chapter4.

--- a/slides/cs380-chapter4.html
+++ b/slides/cs380-chapter4.html
@@ -153,6 +153,18 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">How would we determine which option is best?</p>
                 </section>
 
+                <section>
+                    <h1 id="sql_data_types">SQL Data Types</h1>
+                    <p class="fragment">Date, time, and timestamp</p>
+                    <p class="fragment">What are the similarities and differences?</p>
+                    <p class="fragment">Also, there are "large object" types</p>
+                    <p class="fragment">CLOB: Character large object</p>
+                    <p class="fragment">BLOB: Binary large object</p>
+                    <p class="fragment">book_review clob(10 KB)</p>
+                    <p class="fragment">image blob(10 MB)</p>
+
+                </section>
+
             </div>
 
         </div>
