Added in the slide about programming languages to chapter5.

--- a/slides/cs380-chapter5.html
+++ b/slides/cs380-chapter5.html
@@ -64,6 +64,16 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1 id="reinforce_and_deepen">Explore Advanced SQL Concepts</h1>
                 </section>
 
+                <section>
+                    <h1 id="programming_languages">Programming Languages</h1>
+                    <p class="fragment">Not all queries can be expressed in SQL</p>
+                    <p class="fragment">Many non-declarative actions are also needed</p>
+                    <p class="fragment">Examples of important non-declarative work?</p>
+                    <p class="fragment">Basic review: dynamic and embedded SQL</p>
+                    <p class="fragment">Challenge: data type mismatch</p>
+                    <p class="fragment">Database interaction with drivers: JDBC and ODBC</p>
+                </section>
+
             </div>
 
         </div>
