--- a/slides/cs380-chapter5.html
+++ b/slides/cs380-chapter5.html
@@ -108,6 +108,20 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Research prototypes are changing the situation</p>
                 </section>
 
+                <section>
+                    <h1 id="dynamic_versus_embedded">Dynamic Versus Embedded</h1>
+                </section>
+
+                <section>
+                    <h1 id="triggers">Triggers</h1>
+                    <p class="fragment">What do we need to specify a trigger?</p>
+                    <p class="fragment">#1: An event to "fire" the trigger</p>
+                    <p class="fragment">#2: A condition that must be true</p>
+                    <p class="fragment">Why do we need triggers in a DBMS?</p>
+                    <p class="fragment">How do I specify a database trigger?</p>
+                    <p class="fragment">When should we not use triggers?</p>
+                </section>
+
             </div>
 
         </div>
